--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,6 +40,13 @@
 
 		.ba-search {
 			&-form {
+				button {
+					color: #fff;
+					background-color: $secondaryColor;
+					border: 0;
+				}
+
+				&-btn {}
 
 				// position: fixed;
 				// top: 0;
@@ -60,6 +67,7 @@
 						display: flex;
 					}
 				}
+
 
 			}
 		}
@@ -290,7 +298,7 @@
 }
 
 .ba-slider1 .slick-dots {
-	bottom: 2rem;
+	// bottom: 2rem;
 	// height: ;
 }
 
@@ -570,7 +578,9 @@
 		justify-content: space-around;
 		align-items: center;
 		flex-wrap: wrap;
-		// max-height: 9rem;
+		// max-height: 7rem;
+		padding: 0;
+		margin: 0;
 	}
 
 	&-items:hover {
