--- a/styles/app.css
+++ b/styles/app.css
@@ -174,6 +174,10 @@
       justify-content: space-between; }
     .ba-header-top .ba-search-form {
       display: flex; }
+      .ba-header-top .ba-search-form button {
+        color: #fff;
+        background-color: #000;
+        border: 0; }
       .ba-header-top .ba-search-form__input {
         display: none; }
         @media screen and (min-width: 768px) {
@@ -288,9 +292,6 @@
   display: flex; }
   .ba-slider1 img {
     width: 100%; }
-
-.ba-slider1 .slick-dots {
-  bottom: 2rem; }
 
 .breadcrumbs {
   display: flex;
@@ -446,7 +447,9 @@
       display: flex;
       justify-content: space-around;
       align-items: center;
-      flex-wrap: wrap; } }
+      flex-wrap: wrap;
+      padding: 0;
+      margin: 0; } }
   .ba-brands-items:hover {
     transform: scale(1.1); }
 
