--- a/scss/style.scss
+++ b/scss/style.scss
@@ -177,32 +177,33 @@
 
 					position: relative;
 					// opacity: .7;
-					transition: opacity .3s cubic-bezier(.51, .92, .24, 1);
+					// transition: opacity .3s cubic-bezier(.51, .92, .24, 1);
 
 
 					&::after {
-						--scale: 0;
+						// --scale: 0;
 
-						content: '';
-						position: absolute;
-						left: 0;
-						right: 0;
-						top: 100%;
-						height: 3px;
-						background: linear-gradient(135deg, rgb(115, 250, 200), rgb(0, 190, 225));
-						transform: scaleX(var(--scale));
-						transform-origin: var(--x) 50%;
-						transition: transform .3s cubic-bezier(.51, .92, .24, 1);
+						// content: '';
+						// position: absolute;
+						// left: 0;
+						// right: 0;
+						// top: 100%;
+						// height: 3px;
+						// background: linear-gradient(135deg, rgb(146, 146, 146), rgb(0, 0, 0));
+						// transform: scaleX(var(--scale));
+						// transform-origin: var(--x) 50%;
+						// transition: transform .3s cubic-bezier(.51, .92, .24, 1);
 					}
 
 					&:hover {
-						opacity: 1;
+						// opacity: 1;
+
 						// background-color: $primaryColor;
 						// border-bottom: solid 2px $primaryColor;
 					}
 
 					&:hover::after {
-						--scale: 1;
+						// --scale: 1;
 					}
 
 
@@ -337,7 +338,7 @@
 
 				&:hover {
 					// font-weight: bold;
-					text-decoration: underline;
+					// text-decoration: underline;
 
 				}
 			}
@@ -782,36 +783,32 @@
 
 
 
-.btn {
-	text-decoration: none;
-	background: $secondaryColor;
-	color: #fff;
-	// min-width: 100px;
-	padding: 0 1em;
-	border: none;
 
-	// &:hover {
-	// 	@include buttonHover;
-	// }
-}
 
 // 
-.btn_black-brdr {
-	background: -webkit-gradient(linear, left bottom, left top, color-stop(52%, #fff), color-stop(48%, #232323)) left top/100% 200% no-repeat;
-	background: -webkit-linear-gradient(bottom, #fff 52%, #232323 48%) left top/100% 200% no-repeat;
-	background: -o-linear-gradient(bottom, #fff 52%, #232323 48%) left top/100% 200% no-repeat;
-	background: linear-gradient(to top, #fff 52%, #232323 48%) left top/100% 200% no-repeat;
-	color: #fff;
-	border: 1px solid #fff;
-}
-
+// .btn_black-brdr {
+// 	background: -webkit-gradient(linear, left bottom, left top, color-stop(52%, #fff), color-stop(48%, #232323)) left top/100% 200% no-repeat;
+// 	background: -webkit-linear-gradient(bottom, #fff 52%, #232323 48%) left top/100% 200% no-repeat;
+// 	background: -o-linear-gradient(bottom, #fff 52%, #232323 48%) left top/100% 200% no-repeat;
+// 	background: linear-gradient(to top, #fff 52%, #232323 48%) left top/100% 200% no-repeat;
+// 	color: #fff;
+// 	border: 1px solid #fff;
+// }
 .btn_white-brdr {
 	color: #232323;
-	border: 1px solid #ebebeb;
+	border: 1px solid #fff;
 	background: -webkit-gradient(linear, left bottom, left top, color-stop(52%, #232323), color-stop(48%, #fff)) left top/100% 200% no-repeat;
 	background: -webkit-linear-gradient(bottom, #232323 52%, #fff 48%) left top/100% 200% no-repeat;
 	background: -o-linear-gradient(bottom, #232323 52%, #fff 48%) left top/100% 200% no-repeat;
 	background: linear-gradient(to top, #232323 52%, #fff 48%) left top/100% 200% no-repeat;
+}
+.btn_gray-brdr {
+	color: #232323;
+	border: 1px solid #ededed;
+	background: -webkit-gradient(linear, left bottom, left top, color-stop(52%, #232323), color-stop(48%, #ededed)) left top/100% 200% no-repeat;
+	background: -webkit-linear-gradient(bottom, #232323 52%, #ededed 48%) left top/100% 200% no-repeat;
+	background: -o-linear-gradient(bottom, #232323 52%, #ededed 48%) left top/100% 200% no-repeat;
+	background: linear-gradient(to top, #232323 52%, #ededed 48%) left top/100% 200% no-repeat;
 }
 
 .btn_white-brdr:active,
@@ -820,7 +817,13 @@
 	background-position: left bottom;
 }
 
-.btn_black-brdr,
+.btn_gray-brdr:active,
+.btn_gray-brdr:hover {
+	color: #ededed;
+	background-position: left bottom;
+}
+
+.btn_gray-brdr,
 .btn_white-brdr {
 	-webkit-transition-property: background-position, color;
 	-o-transition-property: background-position, color;
@@ -831,6 +834,18 @@
 	-webkit-transition-duration: .3s, .3s;
 	-o-transition-duration: .3s, .3s;
 	transition-duration: .3s, .3s;
+}
+.btn {
+	// text-decoration: none;
+	// background: #ededed;
+	// // color: #fff;
+	// // min-width: 100px;
+	// padding: 0 1em;
+	// border: none;
+
+	// &:hover {
+	// 	@include buttonHover;
+	// }
 }
 
 // 
